# lmstudio-mcp-agent

./: .env.example  .env.sample  .gitignore  FIXED_README.md  LICENSE  PROJECT_COMPLETION_REPORT.md  PROJECT_PROGRESS.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  README_test.md  TECHNICAL_DETAILS.md  attack_pipeline.py  check_env.py  gemini.py  main.py  mcp_config.json  mcp_manager.py  pyproject.toml  query_handler.py  requirements.txt  run_demo.py  setup.py  test_app.py  test_framework.py
attack_framework/: __init__.py  attack_executor.py  attack_templates.py  feedback_loop.py  report_generator.py  unified_attack_executor.py
attack_framework_v2/: __init__.py  llm_to_llm_attacker.py
data/: combined.jsonl  jailbreaks.json
mcp_server/: cal_cvss.py  desktop-commander.py  mcp-pi.py  mcp_client_helper.py  mcp_server_file_manager.py  mcp_server_weather.py  select_prompt.py  thinker.py  workflow-orchestrator.py
mcp_server/module/: calc_cvss.py
mcp_server/test/: test_calc_cvss.py
reports/: attack_results_20250615_120733.json  attack_results_20250615_120807.json  attack_results_20250615_121045.json  report_20250615_120732.html  report_20250615_120732.json  report_20250615_120806.html  report_20250615_120806.json  report_20250615_121044.html  report_20250615_121044.json
utils/: download.py  make.py  remove.py  run.py
